--- a/跨域,CORS,JSONP/ji-com/public/index.html
+++ b/跨域,CORS,JSONP/ji-com/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div>ji.com</div>
+    <script src="http://127.0.0.1:8888/friends.json"></script>
     <script src="./ji.js"></script>
   </body>
 </html>
