动态服务器

--- a/动态服务器/public/signin.html
+++ b/动态服务器/public/signin.html
@@ -7,33 +7,32 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <title>登录页</title>
+    <title>Document</title>
   </head>
   <body>
-    <form action="" id="signUpForm">
+    <form action="" id="signInForm">
       <div>
         <label>用户名<input type="text" name="name" /></label>
         <label>密码<input type="password" name="password" /></label>
       </div>
-      <button type="submit">注册</button>
+      <button type="submit">登录</button>
     </form>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-      const $form = $("#signUpForm");
-      $("#signUpForm").on("submit", (e) => {
+      const $form = $("#signInForm");
+      $form.on("submit", (e) => {
         e.preventDefault();
         const name = $form.find("input[name=name]").val();
         const password = $form.find("input[name=password]").val();
-        console.log(name, password);
         $.ajax({
           method: "POST",
-          url: "/register",
+          url: "/signin",
           contentType: "text/json; charset=UTF-8",
           data: JSON.stringify({ name, password }),
         }).then(
           () => {
-            alert("注册成功");
-            location.href = "./signin.html";
+            alert("登录成功");
+            location.href = "home.html";
           },
           () => {}
         );
